--- a/agent/intents/tanf-application_usersays_en.json
+++ b/agent/intents/tanf-application_usersays_en.json
@@ -1,5 +1,31 @@
 [
   {
+    "id": "473ec3ab-0fef-4060-8b37-38f2ab6f26ad",
+    "data": [
+      {
+        "text": "what\u0027s tanf?",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "ff8c4096-a226-4008-a33f-3b1575945160",
+    "data": [
+      {
+        "text": "tanf please.",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
     "id": "e4b9ff58-295d-4d0d-b1de-8d62e0484c5d",
     "data": [
       {
