--- a/.gitignore
+++ b/.gitignore
@@ -71,7 +71,7 @@ functions/analyticsKey.json
 scripts/export/
 content/
 
-*/mdhs-key-dev.json
+mdhs-key-dev.json
 mdhs-key-isd.json
 mdhs-key-stage.json
 mdhs-key-prod.json
