--- a/agent/intents/snap-application_usersays_en.json
+++ b/agent/intents/snap-application_usersays_en.json
@@ -1,5 +1,366 @@
 [
   {
+    "id": "2f815e29-cc1b-4999-b967-f15c9f72f1ff",
+    "data": [
+      {
+        "text": "I\u0027m applying for snap benefits",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "8bb82218-0880-4a3f-9fa7-6b7e9b2c386f",
+    "data": [
+      {
+        "text": "So with my case being closed to do need to reapply for snap or wait on something from you guys?",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "0a1355ea-264e-44ce-a9d5-0fbef0f51254",
+    "data": [
+      {
+        "text": "what\u0027s snap?",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "be819804-10a6-4638-8eba-5b96f2a67cd6",
+    "data": [
+      {
+        "text": "snap please",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "f6d6b226-8880-49ad-8b9e-187825108b81",
+    "data": [
+      {
+        "text": "I receive food stamps",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "314212d7-9022-4163-8c42-e7292bfa7693",
+    "data": [
+      {
+        "text": "Renew food stamp",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "a11a6262-a880-49d3-a6bf-46c8f7ec39bc",
+    "data": [
+      {
+        "text": "Food stamps",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "7f23d770-7dc2-40be-b7da-bce827106d95",
+    "data": [
+      {
+        "text": "I\u0027m trying to apply for food stamps",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "83907001-e29d-4a26-8bc0-7750f2fc30a0",
+    "data": [
+      {
+        "text": "Re-certification of SNAP",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "89f8ddf9-9a78-4492-851e-817a79041ce2",
+    "data": [
+      {
+        "text": "How do I receritfy my snap case",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "cc9182e7-c2ef-4022-a1d4-bdc5f7dd332b",
+    "data": [
+      {
+        "text": "I\u0027m looking for my stamps for my kids for school that received free lunch for the school year I haven\u0027t received those yet",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "91d08ea0-51e4-41ce-be05-bff1e504faeb",
+    "data": [
+      {
+        "text": "Recertification",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 2,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "4fef4c0a-6371-4e51-9a02-9866c42aac06",
+    "data": [
+      {
+        "text": "I need to reapply",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 2,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "b7cf3df0-3e53-4d4e-9945-ed659ea8555c",
+    "data": [
+      {
+        "text": "I\u0027m trying to do a recertification with SNAP",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "cc0b984f-6baf-4a08-a183-ed8294fbea1d",
+    "data": [
+      {
+        "text": "Recertify",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "c057de8e-b3fd-4c2f-b1d0-dd7091d4de42",
+    "data": [
+      {
+        "text": "Reapply online",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "27c0f600-78c2-4fb4-91b3-41f0fccbdbb8",
+    "data": [
+      {
+        "text": "I\u0027m trying to find recertification letter to sign",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "d1f6a90e-f5c5-4a42-ad35-046b03b5d8b4",
+    "data": [
+      {
+        "text": "I\u0027ve been denied when can I reapply",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "0a148bf2-e968-47e5-8e6a-baf72ef4fcf7",
+    "data": [
+      {
+        "text": "When can I reapply after I\u0027ve been canceled",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "84c1ea92-7f75-4605-bd90-09da94e256dd",
+    "data": [
+      {
+        "text": "Im trying to  mail my renewl application but they didn\u0027t  send me anything with the mailing  address",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "1ceddf51-6c60-4b7f-ba22-0b48d7d39552",
+    "data": [
+      {
+        "text": "Trying to recertification",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "8c0c5929-ef57-4051-89cc-b135543dbe36",
+    "data": [
+      {
+        "text": "How do i recertify",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "61948de7-b632-4463-b344-5648e90de5a0",
+    "data": [
+      {
+        "text": "Renew certification",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "42fab265-9977-4ab3-adc2-187c90bedd51",
+    "data": [
+      {
+        "text": "It\u0027s time for me to recertified",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "9e5e3148-b781-431f-96cd-4710dbc87227",
+    "data": [
+      {
+        "text": "I\u0027m trying to do my recertification",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "a26cb476-a796-4978-a5d0-a165c2eefc1c",
+    "data": [
+      {
+        "text": "I have covid ",
+        "userDefined": false
+      },
+      {
+        "text": "19",
+        "meta": "@sys.number",
+        "alias": "number",
+        "userDefined": false
+      },
+      {
+        "text": " how can I do a recertification for snap",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 0,
+    "lang": "en",
+    "updated": 0
+  },
+  {
+    "id": "f1fb2736-b8cd-4a1f-a4cc-bb76e486f49e",
+    "data": [
+      {
+        "text": "can I recertify online?",
+        "userDefined": false
+      }
+    ],
+    "isTemplate": false,
+    "count": 1,
+    "lang": "en",
+    "updated": 0
+  },
+  {
     "id": "f5aa740f-7381-4773-9d05-1c470190b3e4",
     "data": [
       {
