#521 - Removing training phrases from default welcome intent and acknowledgement intent

--- a/agent/intents/cse-apptsQA-missed-appt.json
+++ b/agent/intents/cse-apptsQA-missed-appt.json
@@ -1,79 +1,79 @@
 {
-    "id": "6a16afe2-c22d-46e8-8bbd-72cb1208d95e",
-    "name": "cse-apptsQA-missed-appt",
-    "auto": true,
-    "contexts": [
-        "cse-subject-matter"
-    ],
-    "responses": [
+  "id": "6a16afe2-c22d-46e8-8bbd-72cb1208d95e",
+  "name": "cse-apptsQA-missed-appt",
+  "auto": true,
+  "contexts": [
+    "cse-subject-matter"
+  ],
+  "responses": [
+    {
+      "resetContexts": false,
+      "action": "",
+      "affectedContexts": [
         {
-            "resetContexts": false,
-            "action": "",
-            "affectedContexts": [
-                {
-                    "name": "waiting-appts-yes-contacted",
-                    "lifespan": 2,
-                    "parameters": {}
-                },
-                {
-                    "name": "cse-subject-matter",
-                    "lifespan": 99,
-                    "parameters": {}
-                }
-            ],
-            "parameters": [],
-            "messages": [
-                {
-                    "type": "0",
-                    "title": "",
-                    "textToSpeech": "",
-                    "lang": "en",
-                    "speech": [
-                        "Plan to appear at the office listed in your notice letter during the specified time frame."
-                    ],
-                    "condition": ""
-                },
-                {
-                    "type": "0",
-                    "title": "",
-                    "textToSpeech": "",
-                    "lang": "en",
-                    "speech": [
-                        "Failure to appear in accordance with notice instructions may result in your case being closed and your public assistance benefits may be sanctioned."
-                    ],
-                    "condition": ""
-                },
-                {
-                    "type": "0",
-                    "title": "",
-                    "textToSpeech": "",
-                    "lang": "en",
-                    "speech": [
-                        "If you have urgent questions, or cannot appear during the allotted time, you can contact support at <a href=\"tel:+18778824916\">1-877-882-4916</a>."
-                    ],
-                    "condition": ""
-                },
-                {
-                    "type": "4",
-                    "title": "",
-                    "payload": {
-                        "suggestions": [],
-                        "handleEndConversation": false
-                    },
-                    "textToSpeech": "",
-                    "lang": "en",
-                    "condition": ""
-                }
-            ],
-            "speech": []
+          "name": "waiting-appts-yes-contacted",
+          "lifespan": 2,
+          "parameters": {}
+        },
+        {
+          "name": "cse-subject-matter",
+          "lifespan": 99,
+          "parameters": {}
         }
-    ],
-    "priority": 500000,
-    "webhookUsed": true,
-    "webhookForSlotFilling": false,
-    "fallbackIntent": false,
-    "events": [],
-    "conditionalResponses": [],
-    "condition": "",
-    "conditionalFollowupEvents": []
+      ],
+      "parameters": [],
+      "messages": [
+        {
+          "type": "0",
+          "title": "",
+          "textToSpeech": "",
+          "lang": "en",
+          "speech": [
+            "Plan to appear at the office listed in your notice letter during the specified time frame."
+          ],
+          "condition": ""
+        },
+        {
+          "type": "0",
+          "title": "",
+          "textToSpeech": "",
+          "lang": "en",
+          "speech": [
+            "Failure to appear in accordance with notice instructions may result in your case being closed and your public assistance benefits may be sanctioned."
+          ],
+          "condition": ""
+        },
+        {
+          "type": "0",
+          "title": "",
+          "textToSpeech": "",
+          "lang": "en",
+          "speech": [
+            "If you have urgent questions, or cannot appear during the allotted time, you can contact support at \u003ca href\u003d\"tel:+18778824916\"\u003e1-877-882-4916\u003c/a\u003e."
+          ],
+          "condition": ""
+        },
+        {
+          "type": "4",
+          "title": "",
+          "payload": {
+            "suggestions": [],
+            "handleEndConversation": false
+          },
+          "textToSpeech": "",
+          "lang": "en",
+          "condition": ""
+        }
+      ],
+      "speech": []
+    }
+  ],
+  "priority": 500000,
+  "webhookUsed": true,
+  "webhookForSlotFilling": false,
+  "fallbackIntent": false,
+  "events": [],
+  "conditionalResponses": [],
+  "condition": "",
+  "conditionalFollowupEvents": []
 }
