--- a/functions/package.json
+++ b/functions/package.json
@@ -57,6 +57,7 @@
   },
   "private": true,
   "devDependencies": {
+    "@types/dialogflow-fulfillment": "^0.6.0",
     "@types/node": "^14.14.0",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
