--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -1,6 +1,13 @@
 {
+  "compileOnSave": true,
   "compilerOptions": {
     "resolveJsonModule": true,
-    "esModuleInterop": true
-  }
+    "esModuleInterop": true,
+    "noUnusedLocals": true,
+    "outDir": "lib",
+    "sourceMap": true
+  },
+  "include": [
+    "src"
+  ]
 }
