--- a/chatframe/public/app/package.json
+++ b/chatframe/public/app/package.json
@@ -10,8 +10,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint --cache --format codeframe --ext mjs,jsx,js src",
-    "lint:fix": "yarn lint --fix",
-    "generate-plugin": "npm install && npm run build && cd scripts && node createPluginZip.js"
+    "lint:fix": "yarn lint --fix"
   },
   "dependencies": {
     "@material-ui/core": "^3.9.2",
@@ -35,9 +34,17 @@
     "uuid": "^8.3.0",
     "validator": "^13.1.17",
     "webfontloader": "^1.6.28",
-    "whatwg-fetch": "^3.4.1"
+    "whatwg-fetch": "^3.4.1",
+    "web-vitals": "^0.2.4"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
     "@types/googlemaps": "^3.0.0",
     "@types/markerclustererplus": "^2.1.29",
     "fetch-mock": "^9.10.7",
@@ -45,12 +52,22 @@
     "typescript": "^4.0.3"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not ie <= 11",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
