--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
           command: cd scripts/deployment && node populateFirestore
   deploy_functions:
     docker:
-      - image: circleci/node
+      - image: circleci/node:10.16.3
     working_directory: ~/repo/
     parameters:
       firebaseProjectId:
