Initial work converting front end to typescript

--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -4,6 +4,7 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "noUnusedLocals": true,
+    "noImplicitAny": false,
     "moduleResolution": "node",
     "isolatedModules": true,
     "outDir": "lib",
