--- a/chatframe/public/app/package.json
+++ b/chatframe/public/app/package.json
@@ -9,8 +9,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint --cache --format codeframe --ext mjs,jsx,js src",
-    "lint:fix": "yarn lint --fix"
+    "lint": "npx eslint '**/*.ts'",
+    "lint-fix": "npx eslint '**/*.ts' --fix"
   },
   "dependencies": {
     "@material-ui/core": "^3.9.2",
@@ -19,23 +19,22 @@
     "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
     "global": "^4.3.2",
+    "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.20",
     "markdown-to-jsx": "^7.0.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-google-maps": "^9.4.5",
     "react-redux": "^7.2.1",
     "react-virtualized": "^9.22.2",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.0",
-    "react-scripts": "^3.4.3",
     "utf-8-validate": "^5.0.2",
     "uuid": "^8.3.0",
     "validator": "^13.1.17",
     "webfontloader": "^1.6.28",
-    "whatwg-fetch": "^3.4.1",
-    "web-vitals": "^0.2.4"
+    "whatwg-fetch": "^3.4.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.4",
@@ -47,8 +46,11 @@
     "@types/react-dom": "^16.9.8",
     "@types/googlemaps": "^3.0.0",
     "@types/markerclustererplus": "^2.1.29",
+    "@typescript-eslint/eslint-plugin": "^4.5.0",
+    "@typescript-eslint/parser": "^4.5.0",
+    "eslint": "^7.11.0",
     "fetch-mock": "^9.10.7",
-    "isomorphic-fetch": "^2.2.1",
+    "react-scripts": "4.0.0",
     "typescript": "^4.0.3"
   },
   "eslintConfig": {
