--- a/chatframe/public/app/package.json
+++ b/chatframe/public/app/package.json
@@ -40,12 +40,16 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/googlemaps": "^3.0.0",
     "@types/jest": "^26.0.15",
+    "@types/lodash": "^4.14.163",
+    "@types/markerclustererplus": "^2.1.29",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
-    "@types/googlemaps": "^3.0.0",
-    "@types/markerclustererplus": "^2.1.29",
+    "@types/react-redux": "^7.1.9",
+    "@types/styled-components": "^5.1.4",
+    "@types/webfontloader": "^1.6.32",
     "@typescript-eslint/eslint-plugin": "^4.5.0",
     "@typescript-eslint/parser": "^4.5.0",
     "eslint": "^7.11.0",
