--- a/functions/package.json
+++ b/functions/package.json
@@ -27,6 +27,7 @@
     "@google-cloud/dialogflow": "^3.3.0",
     "@google-cloud/storage": "^5.3.0",
     "@types/date-fns": "^2.6.0",
+    "@types/sanitize-html": "^1.27.0",
     "actions-on-google": "^2.13.0",
     "bufferutil": "^4.0.1",
     "camelcase": "^6.0.0",
@@ -46,7 +47,7 @@
     "parse-address": "^1.1.2",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
-    "sanitize-html": "^1.27.3",
+    "sanitize-html": "^1.27.5",
     "utf-8-validate": "^5.0.2",
     "validator": "^13.1.1"
   },
