--- a/agent/intents/wfd-application-root.json
+++ b/agent/intents/wfd-application-root.json
@@ -53,7 +53,7 @@
           "textToSpeech": "",
           "lang": "en",
           "speech": [
-            "If you are looking for services other than skills2work, you can access \u003ca target\u003d\"_blank\" href\u003d\"https://myresources.mdhs.ms.gov/\"\u003eMyResources\u003c/a\u003e"
+            "If you are looking for services other than Skills2Work, you can access \u003ca target\u003d\"_blank\" href\u003d\"https://myresources.mdhs.ms.gov/\"\u003eMyResources\u003c/a\u003e"
           ],
           "condition": ""
         },
