--- a/agent/intents/tanf-application.json
+++ b/agent/intents/tanf-application.json
@@ -17,6 +17,40 @@
           "title": "",
           "textToSpeech": "",
           "lang": "en",
+          "speech": [
+            "The TANF Program provides for families with needy children under age 18. The program is designed to help families achieve self-sufficiency through employment and training."
+          ],
+          "condition": ""
+        },
+        {
+          "type": "0",
+          "title": "",
+          "textToSpeech": "",
+          "lang": "en",
+          "speech": [
+            "Please  \u003ca href\u003d\"https://www.access.ms.gov/Application\" target\u003d\"_blank\"\u003eclick here\u003c/a\u003e to start a new TANF application."
+          ],
+          "condition": ""
+        },
+        {
+          "type": "0",
+          "title": "",
+          "textToSpeech": "",
+          "lang": "en",
+          "speech": [
+            "If you need additional help, please see resources available in your area by clicking \u003ca href\u003d\"https://myresources.mdhs.ms.gov/\" target\u003d\"_blank\"\u003ehere\u003c/a\u003e"
+          ],
+          "condition": ""
+        },
+        {
+          "type": "4",
+          "title": "",
+          "payload": {
+            "handleEndConversation": true,
+            "suggestions": []
+          },
+          "textToSpeech": "",
+          "lang": "en",
           "condition": ""
         }
       ],
