#550 - Adding missing context to several intents

--- a/agent/intents/acknowledge-privacy-statement.json
+++ b/agent/intents/acknowledge-privacy-statement.json
@@ -30,6 +30,22 @@
         {
           "name": "wfd-enableHome",
           "lifespan": 1
+        },
+        {
+          "name": "cse-subject-matter",
+          "lifespan": 0
+        },
+        {
+          "name": "snap-subject-matter",
+          "lifespan": 0
+        },
+        {
+          "name": "tanf-subject-matter",
+          "lifespan": 0
+        },
+        {
+          "name": "wfd-subject-matter",
+          "lifespan": 0
         }
       ],
       "parameters": [],
