--- a/functions/package.json
+++ b/functions/package.json
@@ -63,6 +63,7 @@
     "@typescript-eslint/parser": "^4.5.0",
     "eslint": "^7.11.0",
     "firebase-functions-test": "^0.2.2",
+    "fs": "0.0.1-security",
     "jest": "^26.4.2",
     "typescript": "^4.0.3"
   },
