#559 typescript refactor for webchat analytics

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,13 +30,23 @@
   "cSpell.words": [
     "COVID",
     "Convo",
+    "Genbot",
     "Geocode",
     "MDHS",
+    "SSSXXX",
+    "Subheader",
     "appts",
+    "borderradius",
+    "boxshadow",
+    "dd'T'HH",
     "libphonenumber",
     "mailto",
     "myresources",
     "pebt",
+    "pmts",
+    "randomcolor",
+    "realtime",
+    "refetch",
     "ticketinfo",
     "timeframe"
   ],
