--- a/hosting/analytics/package.json
+++ b/hosting/analytics/package.json
@@ -25,7 +25,7 @@
     "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.3",
+    "react-scripts": "^4.0.0",
     "recharts": "^1.6.2",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
@@ -33,7 +33,6 @@
     "sass": "1.26.11",
     "shortid": "^2.2.14",
     "styled-components": "^5.2.0",
-    "typescript": "3.9.2",
     "utf-8-validate": "^5.0.2"
   },
   "peerDependencies": {
@@ -44,14 +43,30 @@
     "utf-8-validate": "^5.0.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.163",
+    "@types/mocha": "^8.0.4",
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.6",
+    "@types/react-test-renderer": "^16.9.3",
+    "@types/recharts": "^1.8.16",
+    "@types/styled-components": "^5.1.4",
+    "@types/webfontloader": "^1.6.32",
+    "@typescript-eslint/eslint-plugin": "^4.5.0",
+    "@typescript-eslint/parser": "^4.5.0",
+    "eslint": "^7.11.0",
     "firebase-tools": "^8.10.0",
-    "react-test-renderer": "^16.8.4"
+    "react-test-renderer": "^16.8.4",
+    "typescript": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --no-watch",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "npx eslint '**/*.ts' && npx eslint '**/*.tsx'",
+    "lint-fix": "npx eslint '**/*.ts' --fix && npx eslint '**/*.tsx' --fix"
   },
   "eslintConfig": {
     "extends": "react-app"
