Refactoring cold start function to hopefully reduce cold starts by users

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,11 +35,17 @@
     "MDHS",
     "SSSXXX",
     "Subheader",
+    "appspot",
     "appts",
-    "jira",
     "borderradius",
     "boxshadow",
+    "chatframe",
+    "circleci",
     "dd'T'HH",
+    "eppi",
+    "firebaseapp",
+    "havent",
+    "jira",
     "libphonenumber",
     "mailto",
     "myresources",
@@ -50,5 +56,50 @@
     "refetch",
     "ticketinfo",
     "timeframe"
+  ],
+  "cSpell.ignoreWords": [
+    "a",
+    "axh",
+    "b",
+    "c",
+    "case",
+    "close",
+    "cscqa",
+    "d",
+    "dlk",
+    "ebn",
+    "ep",
+    "gi",
+    "gkhs",
+    "im",
+    "interop",
+    "iza",
+    "j",
+    "jqwyh",
+    "ju",
+    "kxwy",
+    "lc",
+    "lsa",
+    "m",
+    "n",
+    "npb",
+    "nsv",
+    "o",
+    "oxpj",
+    "pc",
+    "qancp",
+    "qayes",
+    "qt",
+    "rg",
+    "rmgpe",
+    "sp",
+    "sy",
+    "u",
+    "ueoep",
+    "uu",
+    "vm",
+    "y",
+    "zh",
+    "zoz"
   ],
 }
