--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,7 @@ jobs:
         type: integer
       serviceDeskEnv:
         type: string
-      healthCheckUrl:
+      fulfillmentUrl:
         type: string
     steps:
       - checkout
@@ -79,7 +79,7 @@ jobs:
 
             SERVICE_DESK_ENV=<< parameters.serviceDeskEnv >>
 
-            HEALTH_CHECK_URL=<< parameters.healthCheckUrl >>" > .env
+            FULFILLMENT_URL=<< parameters.fulfillmentUrl >>" > .env
       - run: sudo npm install -g firebase-tools
       - run: firebase deploy --only functions,firestore --token $FIREBASE_DEPLOY_TOKEN -P << parameters.firebaseProjectId >>
 
@@ -195,7 +195,7 @@ workflows:
           serviceDeskID: 7
           requestTypeID: 75
           serviceDeskEnv: Test
-          healthCheckUrl: https://us-central1-mdhs-csa-dev.cloudfunctions.net/dialogflowFirebaseFulfillment?healthCheck=true
+          fulfillmentUrl: https://us-central1-mdhs-csa-dev.cloudfunctions.net/dialogflowFirebaseFulfillment?coldStart=true
           filters:
             branches:
               only:
@@ -240,7 +240,7 @@ workflows:
           serviceDeskID: 7
           requestTypeID: 75
           serviceDeskEnv: Test
-          healthCheckUrl: https://us-central1-mdhs-csa-isd-273818.cloudfunctions.net/dialogflowFirebaseFulfillment?healthCheck=true
+          fulfillmentUrl: https://us-central1-mdhs-csa-isd-273818.cloudfunctions.net/dialogflowFirebaseFulfillment?coldStart=true
           filters:
             branches:
               only:
@@ -285,7 +285,7 @@ workflows:
           serviceDeskID: 7
           requestTypeID: 75
           serviceDeskEnv: Test
-          healthCheckUrl: https://us-central1-mdhs-csa-stage.cloudfunctions.net/dialogflowFirebaseFulfillment?healthCheck=true
+          fulfillmentUrl: https://us-central1-mdhs-csa-stage.cloudfunctions.net/dialogflowFirebaseFulfillment?coldStart=true
           filters:
             branches:
               only:
@@ -330,13 +330,13 @@ workflows:
           serviceDeskID: 7
           requestTypeID: 75
           serviceDeskEnv: Production
-          healthCheckUrl: https://us-central1-mdhs-csa.cloudfunctions.net/dialogflowFirebaseFulfillment?healthCheck=true
+          fulfillmentUrl: https://us-central1-mdhs-csa.cloudfunctions.net/dialogflowFirebaseFulfillment?coldStart=true
           filters:
             branches:
               only:
                 - master
       # We do NOT deploy the test harness hosting project for the master branch
-      # a wordpress site and requires gen to be implemented via a plug in.
+      # a WordPress site and requires gen to be implemented via a plug in.
       - deploy_hosting_analytics:
           firebaseProjectId: mdhs-csa
           firebaseApiKey: AIzaSyC1Kxwy-RmgB8k80i-xrcMVya_5uE2-sDM # Not a secret
