Initial work adding more types to firebase functions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,10 +36,12 @@
     "SSSXXX",
     "Subheader",
     "appts",
-    "jira",
     "borderradius",
     "boxshadow",
+    "cscqa",
     "dd'T'HH",
+    "interop",
+    "jira",
     "libphonenumber",
     "mailto",
     "myresources",
