--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -4,7 +4,7 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "noUnusedLocals": true,
-    "noImplicitAny": false,
+    "noImplicitAny": true,
     "moduleResolution": "node",
     "isolatedModules": true,
     "outDir": "lib",
