More types to functions

--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -5,7 +5,7 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "noUnusedLocals": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "moduleResolution": "node",
     "isolatedModules": true,
     "outDir": "lib",
