--- a/e2e/package.json
+++ b/e2e/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "js",
   "scripts": {
-    "reconciliation-report": "mocha reconciliation.js --reporter mochawesome --timeout 5000",
-    "regression-report": "mocha test.js --reporter mochawesome --timeout 5000",
-    "test": "mocha --timeout 5000"
+    "reconciliation-report": "mocha reconciliation.js --reporter mochawesome --timeout 10000",
+    "regression-report": "mocha test.js --reporter mochawesome --timeout 10000",
+    "test": "mocha --timeout 10000"
   },
   "author": "",
   "license": "ISC",
@@ -14,9 +14,11 @@
     "dialogflow": "^0.12.2",
     "dotenv": "^6.2.0",
     "firebase-admin": "^8.12.1",
+    "lodash": "^4.17.20",
     "request": "^2.88.2",
     "uuid": "^8.0.0",
-    "xlsx": "^0.16.6"
+    "xlsx": "^0.16.6",
+    "fs": "0.0.1-security"
   },
   "devDependencies": {
     "chai": "^4.2.0",
